packages/neo-one-smart-contract-compiler/src/__tests__/compile/builtins/buffer/__snapshots__/length.test.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Array.prototype.length cannot set the "length" of a buffer 1`] = `
"snippetCode.ts (6,11): Cannot assign to 'length' because it is a constant or a read-only property.

      4 |       let error: string | undefined;
      5 |       try {
    > 6 |         x[a] = 10;
        |           ^
      7 |       } catch (err) {
      8 |         error = err;
      9 |       }
"
`;

exports[`Array.prototype.length cannot set the length of a buffer 1`] = `
"snippetCode.ts (3,9): Cannot assign to 'length' because it is a constant or a read-only property.

      1 | 
      2 |       const x = Buffer.from('3030', 'hex');
    > 3 |       x.length = 4;
        |         ^
      4 |     
"
`;
